fix nav overlap

--- a/themes/bootstrap/css/style.css
+++ b/themes/bootstrap/css/style.css
@@ -2030,7 +2030,7 @@ nav{
         display: block;
     }
     .top-navigation{
-        right: 115px;
+        right: 165px;
     }
 }
 
